--- a/css/style.css
+++ b/css/style.css
@@ -413,8 +413,8 @@ textarea.input {
 }
 
 .quantity {
-  width: 6.875rem;
-  height: 2.125rem;
+  width: 5.625rem;
+  height: 1.5rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -422,8 +422,8 @@ textarea.input {
 
 .quantity__button {
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 2.125rem;
-          flex: 0 0 2.125rem;
+      -ms-flex: 0 0 1.5rem;
+          flex: 0 0 1.5rem;
   position: relative;
   cursor: pointer;
 }
@@ -437,9 +437,9 @@ textarea.input {
   -webkit-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
   transition: all 0.3s ease 0s;
-  margin: 0 0 0 -0.5rem;
+  margin: 0 0 0 -0.4375rem;
   background-color: #DBDBDB;
-  width: 1rem;
+  width: 0.875rem;
   height: 0.125rem;
 }
 
@@ -458,8 +458,8 @@ textarea.input {
 .quantity__input input {
   height: 100%;
   color: #626262;
-  font-size: 1.5rem;
-  line-height: 0.7916666667;
+  font-size: 1.25rem;
+  line-height: 0.95;
   width: 100%;
   text-align: center;
 }
@@ -541,6 +541,7 @@ body::after {
   -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
   background-color: #FFFFFF;
+  padding: 0.625rem;
   width: 100%;
   max-width: 900px;
 }
@@ -559,10 +560,11 @@ body::after {
 .popup-cart-full .popup__content,
 .popup-cart-empty .popup__content {
   min-height: 100vh;
-  max-width: 34.375rem;
-  -webkit-transform: translate(0, -100%);
-      -ms-transform: translate(0, -100%);
-          transform: translate(0, -100%);
+  max-width: 25rem;
+  opacity: 0;
+  -webkit-transform: translate(0, -200%);
+      -ms-transform: translate(0, -200%);
+          transform: translate(0, -200%);
   -webkit-transition: all 0.5s ease 0s;
   -o-transition: all 0.5s ease 0s;
   transition: all 0.5s ease 0s;
@@ -577,6 +579,7 @@ body::after {
 
 .popup-show .popup-cart-full .popup__content,
 .popup-show .popup-cart-empty .popup__content {
+  opacity: 1;
   -webkit-transform: translate(0, 0);
       -ms-transform: translate(0, 0);
           transform: translate(0, 0);
@@ -599,23 +602,25 @@ body::after {
 }
 
 .popup-cart-empty .content-cart__header {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 1.5rem;
-  line-height: 1.2083333333;
+  font-size: 1.25rem;
+  line-height: 1.45;
   color: #333333;
-  border-bottom: 2px solid #DBDBDB;
+  padding-bottom: 0.625rem;
+  border-bottom: 0.125rem solid #DBDBDB;
 }
 
 .popup-cart-empty .content-cart__close {
   position: absolute;
-  width: 2.5rem;
-  height: 2.5rem;
-  top: -0.34375rem;
+  width: 1.25rem;
+  height: 1.25rem;
+  top: 0.28125rem;
   left: 0;
 }
 
@@ -722,17 +727,18 @@ body::after {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  font-size: 1.5rem;
-  line-height: 1.2083333333;
+  font-size: 1.25rem;
+  line-height: 1.45;
   color: #333333;
-  border-bottom: 2px solid #DBDBDB;
+  padding-bottom: 0.625rem;
+  border-bottom: 0.125rem solid #DBDBDB;
 }
 
 .popup-cart-full .content-cart__close {
   position: absolute;
-  width: 2.5rem;
-  height: 2.5rem;
-  top: -0.34375rem;
+  width: 1.25rem;
+  height: 1.25rem;
+  top: 0.28125rem;
   left: 0;
 }
 
@@ -788,11 +794,12 @@ body::after {
   bottom: 0;
   left: 0;
   border-top: 0.125rem solid #A6A6A6;
-  padding-top: 1.25rem;
+  padding-top: 0.625rem;
 }
 
 .popup-cart-full .content-card {
-  padding: 1.25rem 0rem;
+  font-weight: 400;
+  padding: 0.625rem 0rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -805,8 +812,8 @@ body::after {
 
 .popup-cart-full .content-card__image {
   -webkit-box-flex: 1;
-      -ms-flex: 1 0 7.5rem;
-          flex: 1 0 7.5rem;
+      -ms-flex: 1 0 6.25rem;
+          flex: 1 0 6.25rem;
 }
 
 .popup-cart-full .content-card__image img {
@@ -836,20 +843,20 @@ body::after {
 }
 
 .popup-cart-full .item-info__code {
-  font-size: 0.875rem;
-  line-height: 1.2142857143;
+  font-size: 0.75rem;
+  line-height: 1.4166666667;
   color: #9A9999;
 }
 
 .popup-cart-full .item-info__name {
-  font-size: 1rem;
-  line-height: 1.1875;
+  font-size: 0.875rem;
+  line-height: 1.3571428571;
 }
 
 .popup-cart-full .item-info__price {
-  font-size: 1rem;
-  line-height: 1.1875;
-  color: #A6A6A6;
+  font-size: 0.875rem;
+  line-height: 1.3571428571;
+  color: #9A9999;
 }
 
 .popup-cart-full .item-info__delete {
@@ -882,8 +889,9 @@ body::after {
 }
 
 .popup-cart-full .total-info__sum {
-  font-size: 1.375rem;
-  line-height: 1.2272727273;
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 1.35;
   color: #626262;
 }
 
@@ -895,8 +903,8 @@ body::after {
 .popup-cart-full .footer-cart {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-  grid-template-columns: repeat(2, 1fr);
+  -ms-grid-columns: 1fr auto;
+  grid-template-columns: 1fr auto;
   gap: 0.625rem;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -2540,18 +2548,6 @@ body::after {
     font-size: 1.75rem;
   }
 
-  .popup__content {
-    padding: 1.25rem;
-  }
-
-  .popup-cart-empty .content-cart__header {
-    padding-bottom: 1.25rem;
-  }
-
-  .popup-cart-full .content-cart__header {
-    padding-bottom: 1.25rem;
-  }
-
   .product-card {
     padding-top: 1.25rem;
   }
@@ -2907,18 +2903,6 @@ body::after {
     padding-left: 0.3125rem;
   }
 
-  .popup__content {
-    padding: 0.625rem;
-  }
-
-  .popup-cart-empty .content-cart__header {
-    padding-bottom: 0.625rem;
-  }
-
-  .popup-cart-full .content-cart__header {
-    padding-bottom: 0.625rem;
-  }
-
   .product-card {
     padding-top: 0.625rem;
   }
@@ -3144,11 +3128,6 @@ body::after {
 }
 
 @media (max-width: 47.99875em) {
-  .popup-cart-full .popup__content,
-  .popup-cart-empty .popup__content {
-    max-width: 100%;
-  }
-
   .button-up {
     width: 3.75rem;
     height: 3.75rem;
@@ -3453,6 +3432,13 @@ body::after {
   }
 }
 
+@media (max-width: 29.99875em) {
+  .popup-cart-full .popup__content,
+  .popup-cart-empty .popup__content {
+    max-width: 100%;
+  }
+}
+
 @media (max-width: 26.5625em) {
   .button--border-blue {
     width: 100%;
@@ -3540,42 +3526,6 @@ body::after {
 @supports not (font-size: clamp( 1.125rem , 0.9841549296rem  +  0.7042253521vw , 1.75rem )) {
     .button--white {
       font-size: calc(1.125rem + 0.625 * (100vw - 20rem) / 88.75);
-    }
-}
-
-@supports (padding: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem )) {
-    .popup__content {
-      padding: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem );
-    }
-}
-
-@supports not (padding: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem )) {
-    .popup__content {
-      padding: calc(0.625rem + 0.625 * (100vw - 20rem) / 88.75);
-    }
-}
-
-@supports (padding-bottom: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem )) {
-    .popup-cart-empty .content-cart__header {
-      padding-bottom: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem );
-    }
-}
-
-@supports not (padding-bottom: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem )) {
-    .popup-cart-empty .content-cart__header {
-      padding-bottom: calc(0.625rem + 0.625 * (100vw - 20rem) / 88.75);
-    }
-}
-
-@supports (padding-bottom: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem )) {
-    .popup-cart-full .content-cart__header {
-      padding-bottom: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem );
-    }
-}
-
-@supports not (padding-bottom: clamp( 0.625rem , 0.4841549296rem  +  0.7042253521vw , 1.25rem )) {
-    .popup-cart-full .content-cart__header {
-      padding-bottom: calc(0.625rem + 0.625 * (100vw - 20rem) / 88.75);
     }
 }
 
@@ -4412,7 +4362,7 @@ body::after {
 
   .quantity__button:hover::before,
   .quantity__button:hover::after {
-    background-color: #000;
+    background-color: #626262;
   }
 
   .popup-cart-full .item-info__delete:hover {
