--- a/css/style.css
+++ b/css/style.css
@@ -1666,7 +1666,6 @@ body::after {
 }
 
 .footer {
-  padding-bottom: 1.25rem;
   background-color: #424242;
   color: #FFFFFF;
 }
@@ -1720,10 +1719,14 @@ body::after {
 }
 
 .spoller-footer__title {
-  font-size: 1.5rem;
-  line-height: 1.2083333333;
-  padding-bottom: 0.5rem;
+  font-size: 1.25rem;
+  line-height: 1.45;
+  padding-bottom: 0.3125rem;
   border-bottom: 0.0625rem solid #FFFFFF;
+}
+
+.spoller-footer__body {
+  font-size: 1rem;
 }
 
 .spoller-footer__link {
@@ -1741,16 +1744,16 @@ body::after {
 }
 
 .spoller-footer__link:not(:last-child) {
-  margin-bottom: 1.25rem;
+  margin-bottom: 0.9375rem;
 }
 
 .spoller-footer__link::before {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.25rem;
+  height: 1.25rem;
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 1.5rem;
-          flex: 0 0 1.5rem;
-  font-size: 1.5rem;
+      -ms-flex: 0 0 1.25rem;
+          flex: 0 0 1.25rem;
+  font-size: 1.25rem;
 }
 
 .spoller-footer__link::after {
@@ -1783,19 +1786,19 @@ body::after {
 }
 
 .spoller-footer__phone:not(:last-child) {
-  margin-bottom: 1.25rem;
+  margin-bottom: 0.9375rem;
 }
 
 .spoller-footer__phone::before {
   position: absolute;
   top: 0;
-  left: -2.125rem;
-  width: 1.5rem;
-  height: 1.5rem;
+  left: -1.875rem;
+  width: 1.25rem;
+  height: 1.25rem;
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 1.5rem;
-          flex: 0 0 1.5rem;
-  font-size: 1.5rem;
+      -ms-flex: 0 0 1.25rem;
+          flex: 0 0 1.25rem;
+  font-size: 1.25rem;
 }
 
 .spoller-footer__social {
@@ -1807,7 +1810,7 @@ body::after {
       -ms-flex-align: center;
           align-items: center;
   gap: 1.25rem;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 }
 
 .spoller-footer__social a {
@@ -1835,7 +1838,7 @@ body::after {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  row-gap: 1.25rem;
+  row-gap: 0.9375rem;
   -webkit-column-gap: 0.625rem;
      -moz-column-gap: 0.625rem;
           column-gap: 0.625rem;
@@ -1853,12 +1856,12 @@ body::after {
 }
 
 .spoller-footer__day::before {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.25rem;
+  height: 1.25rem;
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 1.5rem;
-          flex: 0 0 1.5rem;
-  font-size: 1.5rem;
+      -ms-flex: 0 0 1.25rem;
+          flex: 0 0 1.25rem;
+  font-size: 1.25rem;
 }
 
 .spoller-footer__hours {
@@ -1872,12 +1875,12 @@ body::after {
 }
 
 .spoller-footer__hours::before {
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1.25rem;
+  height: 1.25rem;
   -webkit-box-flex: 0;
-      -ms-flex: 0 0 1.5rem;
-          flex: 0 0 1.5rem;
-  font-size: 1.5rem;
+      -ms-flex: 0 0 1.25rem;
+          flex: 0 0 1.25rem;
+  font-size: 1.25rem;
 }
 
 .main__container {
@@ -2573,15 +2576,19 @@ body::after {
   }
 
   .footer {
-    padding-top: 5rem;
+    padding-top: 2.5rem;
+  }
+
+  .footer {
+    font-size: 1.125rem;
   }
 
   .footer__container {
-    gap: 2.5rem;
+    gap: 1.875rem;
   }
 
   .spoller-footer__title {
-    font-size: 1.5rem;
+    font-size: 1.25rem;
   }
 
   .main__title {
@@ -2931,12 +2938,16 @@ body::after {
     padding-top: 1.25rem;
   }
 
+  .footer {
+    font-size: 0.9375rem;
+  }
+
   .footer__container {
-    gap: 1.25rem;
+    gap: 0.9375rem;
   }
 
   .spoller-footer__title {
-    font-size: 1.25rem;
+    font-size: 1.125rem;
   }
 
   .main__title {
@@ -3601,39 +3612,51 @@ body::after {
     }
 }
 
-@supports (padding-top: clamp( 1.25rem , 0.4049295775rem  +  4.2253521127vw , 5rem )) {
+@supports (padding-top: clamp( 1.25rem , 0.9683098592rem  +  1.4084507042vw , 2.5rem )) {
     .footer {
-      padding-top: clamp( 1.25rem , 0.4049295775rem  +  4.2253521127vw , 5rem );
+      padding-top: clamp( 1.25rem , 0.9683098592rem  +  1.4084507042vw , 2.5rem );
     }
 }
 
-@supports not (padding-top: clamp( 1.25rem , 0.4049295775rem  +  4.2253521127vw , 5rem )) {
+@supports not (padding-top: clamp( 1.25rem , 0.9683098592rem  +  1.4084507042vw , 2.5rem )) {
     .footer {
-      padding-top: calc(1.25rem + 3.75 * (100vw - 20rem) / 88.75);
+      padding-top: calc(1.25rem + 1.25 * (100vw - 20rem) / 88.75);
     }
 }
 
-@supports (gap: clamp( 1.25rem , 0.9683098592rem  +  1.4084507042vw , 2.5rem )) {
+@supports (font-size: clamp( 0.9375rem , 0.8952464789rem  +  0.2112676056vw , 1.125rem )) {
+    .footer {
+      font-size: clamp( 0.9375rem , 0.8952464789rem  +  0.2112676056vw , 1.125rem );
+    }
+}
+
+@supports not (font-size: clamp( 0.9375rem , 0.8952464789rem  +  0.2112676056vw , 1.125rem )) {
+    .footer {
+      font-size: calc(0.9375rem + 0.1875 * (100vw - 20rem) / 88.75);
+    }
+}
+
+@supports (gap: clamp( 0.9375rem , 0.7262323944rem  +  1.0563380282vw , 1.875rem )) {
     .footer__container {
-      gap: clamp( 1.25rem , 0.9683098592rem  +  1.4084507042vw , 2.5rem );
+      gap: clamp( 0.9375rem , 0.7262323944rem  +  1.0563380282vw , 1.875rem );
     }
 }
 
-@supports not (gap: clamp( 1.25rem , 0.9683098592rem  +  1.4084507042vw , 2.5rem )) {
+@supports not (gap: clamp( 0.9375rem , 0.7262323944rem  +  1.0563380282vw , 1.875rem )) {
     .footer__container {
-      gap: calc(1.25rem + 1.25 * (100vw - 20rem) / 88.75);
+      gap: calc(0.9375rem + 0.9375 * (100vw - 20rem) / 88.75);
     }
 }
 
-@supports (font-size: clamp( 1.25rem , 1.1936619718rem  +  0.2816901408vw , 1.5rem )) {
+@supports (font-size: clamp( 1.125rem , 1.0968309859rem  +  0.1408450704vw , 1.25rem )) {
     .spoller-footer__title {
-      font-size: clamp( 1.25rem , 1.1936619718rem  +  0.2816901408vw , 1.5rem );
+      font-size: clamp( 1.125rem , 1.0968309859rem  +  0.1408450704vw , 1.25rem );
     }
 }
 
-@supports not (font-size: clamp( 1.25rem , 1.1936619718rem  +  0.2816901408vw , 1.5rem )) {
+@supports not (font-size: clamp( 1.125rem , 1.0968309859rem  +  0.1408450704vw , 1.25rem )) {
     .spoller-footer__title {
-      font-size: calc(1.25rem + 0.25 * (100vw - 20rem) / 88.75);
+      font-size: calc(1.125rem + 0.125 * (100vw - 20rem) / 88.75);
     }
 }
 
@@ -4268,18 +4291,6 @@ body::after {
 @supports not (gap: clamp( 1.875rem , -0.1666666667rem  +  4.2534722222vw , 4.9375rem )) {
     .top-header__action {
       gap: calc(1.875rem + 3.0625 * (100vw - 48rem) / 72);
-    }
-}
-
-@supports (font-size: clamp( 1rem , 0.9166666667rem  +  0.1736111111vw , 1.125rem )) {
-    .spoller-footer__body {
-      font-size: clamp( 1rem , 0.9166666667rem  +  0.1736111111vw , 1.125rem );
-    }
-}
-
-@supports not (font-size: clamp( 1rem , 0.9166666667rem  +  0.1736111111vw , 1.125rem )) {
-    .spoller-footer__body {
-      font-size: calc(1rem + 0.125 * (100vw - 48rem) / 72);
     }
 }
 }
