--- a/css/style.css
+++ b/css/style.css
@@ -473,9 +473,9 @@ body::after {
   top: 0;
   left: 0;
   opacity: 0;
-  -webkit-transition: opacity 0.5s ease 0s;
-  -o-transition: opacity 0.5s ease 0s;
-  transition: opacity 0.5s ease 0s;
+  -webkit-transition: opacity 0.8s ease 0s;
+  -o-transition: opacity 0.8s ease 0s;
+  transition: opacity 0.8s ease 0s;
   pointer-events: none;
   z-index: 149;
 }
@@ -490,9 +490,9 @@ body::after {
   left: 0;
   bottom: 0;
   right: 0;
-  -webkit-transition: visibility 0.5s ease 0s;
-  -o-transition: visibility 0.5s ease 0s;
-  transition: visibility 0.5s ease 0s;
+  -webkit-transition: visibility 0.8s ease 0s;
+  -o-transition: visibility 0.8s ease 0s;
+  transition: visibility 0.8s ease 0s;
   visibility: hidden;
   pointer-events: none;
 }
@@ -509,9 +509,11 @@ body::after {
   -webkit-transform: scale(1);
       -ms-transform: scale(1);
           transform: scale(1);
+  left: 0;
 }
 
 .popup__wrapper {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -533,41 +535,22 @@ body::after {
 }
 
 .popup__content {
-  visibility: hidden;
   -webkit-transform: scale(0);
       -ms-transform: scale(0);
           transform: scale(0);
-  -webkit-transition: all 0.5s ease 0s;
-  -o-transition: all 0.5s ease 0s;
-  transition: all 0.5s ease 0s;
-  background-color: #FFFFFF;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+  background-color: #ffffff;
   padding: 0.625rem;
   width: 100%;
-  max-width: 900px;
 }
 
 .lock .popup__content {
   visibility: visible;
 }
 
-.popup-cart-full .popup__wrapper,
-.popup-cart-empty .popup__wrapper {
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-}
-
-.popup-cart-full .popup__content,
-.popup-cart-empty .popup__content {
-  min-height: 100vh;
-  max-width: 25rem;
-  opacity: 0;
-  -webkit-transform: translate(0, -200%);
-      -ms-transform: translate(0, -200%);
-          transform: translate(0, -200%);
-  -webkit-transition: all 0.5s ease 0s;
-  -o-transition: all 0.5s ease 0s;
-  transition: all 0.5s ease 0s;
+.popup--cart-empty {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -577,15 +560,123 @@ body::after {
           flex-direction: column;
 }
 
-.popup-show .popup-cart-full .popup__content,
-.popup-show .popup-cart-empty .popup__content {
-  opacity: 1;
+.popup--cart-empty .popup__wrapper {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.popup--cart-empty .popup__content {
+  position: relative;
+  width: 25rem;
+  min-height: 100%;
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
+  -webkit-transform: translate(100%, -100%);
+      -ms-transform: translate(100%, -100%);
+          transform: translate(100%, -100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  overflow: auto;
+}
+
+.popup--cart-empty .popup__close {
+  position: absolute;
+  z-index: 5;
+  width: 1.25rem;
+  min-height: 1.25rem;
+  top: 0.9375rem;
+  left: 0.625rem;
+}
+
+.popup--cart-empty .popup__close::before {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.popup--cart-empty.popup_show .popup__content {
   -webkit-transform: translate(0, 0);
       -ms-transform: translate(0, 0);
           transform: translate(0, 0);
 }
 
-.popup-cart-empty .content-cart {
+.popup--cart-full {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.popup--cart-full .popup__wrapper {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.popup--cart-full .popup__content {
+  position: relative;
+  width: 25rem;
+  height: 100%;
+  -webkit-transform: scale(0);
+      -ms-transform: scale(0);
+          transform: scale(0);
+  -webkit-transform: translate(100%, -100%);
+      -ms-transform: translate(100%, -100%);
+          transform: translate(100%, -100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.popup--cart-full .popup__close {
+  position: absolute;
+  z-index: 5;
+  width: 1.25rem;
+  height: 1.25rem;
+  top: 0.9375rem;
+  left: 0.625rem;
+}
+
+.popup--cart-full .popup__close::before {
+  -webkit-transform: rotate(180deg);
+      -ms-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.popup--cart-full.popup_show .popup__content {
+  -webkit-transform: translate(0, 0);
+      -ms-transform: translate(0, 0);
+          transform: translate(0, 0);
+}
+
+.popup--order .popup__content {
+  width: 69.375rem;
+}
+
+.popup--order.popup_show .popup__content {
+  -webkit-transform: scale(1);
+      -ms-transform: scale(1);
+          transform: scale(1);
+}
+
+.popup--cart-empty .content-cart-empty {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 100%;
           flex: 1 0 100%;
@@ -601,7 +692,7 @@ body::after {
           justify-content: center;
 }
 
-.popup-cart-empty .content-cart__header {
+.popup--cart-empty .content-cart-empty__header {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -616,28 +707,14 @@ body::after {
   border-bottom: 0.125rem solid #DBDBDB;
 }
 
-.popup-cart-empty .content-cart__close {
-  position: absolute;
-  width: 1.25rem;
-  height: 1.25rem;
-  top: 0.28125rem;
-  left: 0;
-}
-
-.popup-cart-empty .content-cart__close::before {
-  -webkit-transform: rotate(90deg);
-      -ms-transform: rotate(90deg);
-          transform: rotate(90deg);
-}
-
-.popup-cart-empty .content-cart__title {
+.popup--cart-empty .content-cart-empty__title {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
   text-align: center;
 }
 
-.popup-cart-empty .content-cart__body {
+.popup--cart-empty .content-cart-empty__body {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 100%;
           flex: 1 1 100%;
@@ -662,7 +739,7 @@ body::after {
       align-self: center;
 }
 
-.popup-cart-empty .body-cart__image {
+.popup--cart-empty .body-cart-empty__image {
   width: 11.25rem;
   height: 11.25rem;
   background-color: #F2F2F2;
@@ -670,39 +747,39 @@ body::after {
   padding: 2.5rem;
 }
 
-.popup-cart-empty .body-cart__image:not(:last-child) {
+.popup--cart-empty .body-cart-empty__image:not(:last-child) {
   margin-bottom: 1.25rem;
 }
 
-.popup-cart-empty .body-cart__image img {
+.popup--cart-empty .body-cart-empty__image img {
   width: 100%;
 }
 
-.popup-cart-empty .body-cart__title {
+.popup--cart-empty .body-cart-empty__title {
   font-size: 1.375rem;
   line-height: 1.2272727273;
   color: #333333;
 }
 
-.popup-cart-empty .body-cart__title:not(:last-child) {
+.popup--cart-empty .body-cart-empty__title:not(:last-child) {
   margin-bottom: 0.625rem;
 }
 
-.popup-cart-empty .body-cart__text {
+.popup--cart-empty .body-cart-empty__text {
   font-size: 1rem;
   line-height: 1.1875;
   color: #A6A6A6;
 }
 
-.popup-cart-empty .body-cart__text:not(:last-child) {
+.popup--cart-empty .body-cart-empty__text:not(:last-child) {
   margin-bottom: 2.5rem;
 }
 
-.popup-cart-empty .body-cart__btn {
+.popup--cart-empty .body-cart-empty__btn {
   width: 100%;
 }
 
-.popup-cart-full .content-cart {
+.popup--cart-full .content-cart {
   position: relative;
   -webkit-box-flex: 1;
       -ms-flex: 1 0 100%;
@@ -714,13 +791,15 @@ body::after {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  overflow: auto;
 }
 
-.popup-cart-full .content-cart__header {
-  position: relative;
+.popup--cart-full .content-cart__header {
+  position: fixed;
+  z-index: 4;
+  top: 0;
+  left: 0;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -730,11 +809,12 @@ body::after {
   font-size: 1.25rem;
   line-height: 1.45;
   color: #333333;
-  padding-bottom: 0.625rem;
+  padding: 0.625rem 0rem;
   border-bottom: 0.125rem solid #DBDBDB;
+  background-color: #ffffff;
 }
 
-.popup-cart-full .content-cart__close {
+.popup--cart-full .content-cart__close {
   position: absolute;
   width: 1.25rem;
   height: 1.25rem;
@@ -742,20 +822,20 @@ body::after {
   left: 0;
 }
 
-.popup-cart-full .content-cart__close::before {
+.popup--cart-full .content-cart__close::before {
   -webkit-transform: rotate(90deg);
       -ms-transform: rotate(90deg);
           transform: rotate(90deg);
 }
 
-.popup-cart-full .content-cart__title {
+.popup--cart-full .content-cart__title {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 auto;
           flex: 1 0 auto;
   text-align: center;
 }
 
-.popup-cart-full .content-cart__body {
+.popup--cart-full .content-cart__body {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 100%;
           flex: 1 1 100%;
@@ -777,9 +857,11 @@ body::after {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
+  padding-top: 3.1875rem;
+  padding: 3.1875rem 0.3125rem 6.6875rem 0.3125rem;
 }
 
-.popup-cart-full .content-cart__list {
+.popup--cart-full .content-cart__list {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -789,15 +871,17 @@ body::after {
           flex-direction: column;
 }
 
-.popup-cart-full .content-cart__footer {
-  position: relative;
+.popup--cart-full .content-cart__footer {
+  position: fixed;
   bottom: 0;
   left: 0;
+  width: 100%;
   border-top: 0.125rem solid #A6A6A6;
-  padding-top: 0.625rem;
+  padding: 0.625rem;
+  background-color: #ffffff;
 }
 
-.popup-cart-full .content-card {
+.popup--cart-full .content-card {
   font-weight: 400;
   padding: 0.625rem 0rem;
   display: -webkit-box;
@@ -807,20 +891,23 @@ body::after {
       -ms-flex-align: center;
           align-items: center;
   gap: 0.625rem;
+}
+
+.popup--cart-full .content-card:not(:last-child) {
   border-bottom: 0.125rem solid #DBDBDB;
 }
 
-.popup-cart-full .content-card__image {
+.popup--cart-full .content-card__image {
   -webkit-box-flex: 1;
       -ms-flex: 1 0 6.25rem;
           flex: 1 0 6.25rem;
 }
 
-.popup-cart-full .content-card__image img {
+.popup--cart-full .content-card__image img {
   width: 100%;
 }
 
-.popup-cart-full .info-product__item {
+.popup--cart-full .info-product__item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -831,7 +918,7 @@ body::after {
   margin-bottom: 0.3125rem;
 }
 
-.popup-cart-full .item-info__main {
+.popup--cart-full .item-info__main {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -842,24 +929,25 @@ body::after {
   gap: 0.3125rem;
 }
 
-.popup-cart-full .item-info__code {
+.popup--cart-full .item-info__code {
   font-size: 0.75rem;
   line-height: 1.4166666667;
   color: #9A9999;
 }
 
-.popup-cart-full .item-info__name {
+.popup--cart-full .item-info__name {
   font-size: 0.875rem;
   line-height: 1.3571428571;
 }
 
-.popup-cart-full .item-info__price {
+.popup--cart-full .item-info__price {
   font-size: 0.875rem;
   line-height: 1.3571428571;
   color: #9A9999;
 }
 
-.popup-cart-full .item-info__delete {
+.popup--cart-full .item-info__delete {
+  font-weight: 400;
   width: 1.5rem;
   height: 1.5rem;
   -webkit-box-flex: 0;
@@ -867,16 +955,16 @@ body::after {
           flex: 0 0 1.5rem;
   color: #A6A6A6;
   font-size: 1.5rem;
-  -webkit-transition: color 0.3s ease 0s;
-  -o-transition: color 0.3s ease 0s;
-  transition: color 0.3s ease 0s;
+  -webkit-transition: all 0.3s ease 0s;
+  -o-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
 }
 
-.popup-cart-full .item-info__delete:active {
+.popup--cart-full .item-info__delete:active {
   color: #B93434;
 }
 
-.popup-cart-full .total-info {
+.popup--cart-full .total-info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -888,19 +976,19 @@ body::after {
           justify-content: space-between;
 }
 
-.popup-cart-full .total-info__sum {
+.popup--cart-full .total-info__sum {
   font-weight: 500;
   font-size: 1.25rem;
   line-height: 1.35;
   color: #626262;
 }
 
-.popup-cart-full .quantity__button {
+.popup--cart-full .quantity__button {
   border: 1px solid #A6A6A6;
   border-radius: 2px;
 }
 
-.popup-cart-full .footer-cart {
+.popup--cart-full .footer-cart {
   display: -ms-grid;
   display: grid;
   -ms-grid-columns: 1fr auto;
@@ -911,19 +999,19 @@ body::after {
           align-items: center;
 }
 
-.popup-cart-full .footer-cart__total {
+.popup--cart-full .footer-cart__total {
   font-size: 1rem;
   line-height: 1.1875;
 }
 
-.popup-cart-full .footer-cart__value {
+.popup--cart-full .footer-cart__value {
   font-size: 1.375rem;
   line-height: 1.2272727273;
   text-align: right;
   color: #333333;
 }
 
-.popup-cart-full .footer-cart__btn {
+.popup--cart-full .footer-cart__btn {
   -ms-grid-column-span: 2;
   grid-column: span 2;
 }
@@ -1666,6 +1754,7 @@ body::after {
 }
 
 .footer {
+  padding-bottom: 1.25rem;
   background-color: #424242;
   color: #FFFFFF;
 }
@@ -1823,7 +1912,7 @@ body::after {
   border-radius: 50%;
   background-color: #F2F2F2;
   color: #424242;
-  padding-top: 0.5rem;
+  padding-top: 0.625rem;
   text-align: center;
   -webkit-transition: all 0.3s ease 0s;
   -o-transition: all 0.3s ease 0s;
@@ -3443,13 +3532,6 @@ body::after {
   }
 }
 
-@media (max-width: 29.99875em) {
-  .popup-cart-full .popup__content,
-  .popup-cart-empty .popup__content {
-    max-width: 100%;
-  }
-}
-
 @media (max-width: 26.5625em) {
   .button--border-blue {
     width: 100%;
@@ -4376,8 +4458,9 @@ body::after {
     background-color: #626262;
   }
 
-  .popup-cart-full .item-info__delete:hover {
+  .popup--cart-full .item-info__delete:hover {
     color: #DE4444;
+    font-weight: 700;
   }
 
   .product-card:hover {
