--- a/css/style.css
+++ b/css/style.css
@@ -350,11 +350,8 @@ textarea {
 }
 
 .input {
-  border-radius: 0 !important;
   width: 100%;
   display: block;
-  padding: 0px 20px;
-  border: 1px solid #eee;
 }
 
 .input._form-focus {
@@ -509,7 +506,7 @@ body::after {
   -webkit-transform: scale(1);
       -ms-transform: scale(1);
           transform: scale(1);
-  left: 0;
+  opacity: 1;
 }
 
 .popup__wrapper {
@@ -535,6 +532,7 @@ body::after {
 }
 
 .popup__content {
+  opacity: 0;
   -webkit-transform: scale(0);
       -ms-transform: scale(0);
           transform: scale(0);
@@ -544,6 +542,7 @@ body::after {
   background-color: #ffffff;
   padding: 0.625rem;
   width: 100%;
+  border-radius: 0.125rem;
 }
 
 .lock .popup__content {
@@ -568,7 +567,7 @@ body::after {
 
 .popup--cart-empty .popup__content {
   position: relative;
-  width: 25rem;
+  max-width: 25rem;
   min-height: 100%;
   -webkit-transform: scale(0);
       -ms-transform: scale(0);
@@ -628,7 +627,7 @@ body::after {
 
 .popup--cart-full .popup__content {
   position: relative;
-  width: 25rem;
+  max-width: 25rem;
   height: 100%;
   -webkit-transform: scale(0);
       -ms-transform: scale(0);
@@ -667,13 +666,13 @@ body::after {
 }
 
 .popup--order .popup__content {
-  width: 69.375rem;
+  max-width: 50rem;
+  padding: 2.5rem 0.3125rem;
 }
 
-.popup--order.popup_show .popup__content {
-  -webkit-transform: scale(1);
-      -ms-transform: scale(1);
-          transform: scale(1);
+.popup--order-confirmation .popup__content {
+  max-width: 50rem;
+  padding: 6.25rem 1.25rem;
 }
 
 .popup--cart-empty .content-cart-empty {
@@ -1014,6 +1013,191 @@ body::after {
 .popup--cart-full .footer-cart__btn {
   -ms-grid-column-span: 2;
   grid-column: span 2;
+}
+
+.popup--order .popup__close {
+  position: absolute;
+  width: 2.375rem;
+  height: 2.375rem;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 2.375rem;
+          flex: 0 0 2.375rem;
+  font-size: 1.25rem;
+  color: #A6A6A6;
+  top: 0;
+  right: 0;
+  -webkit-transition: color 0.3s ease 0s;
+  -o-transition: color 0.3s ease 0s;
+  transition: color 0.3s ease 0s;
+}
+
+.popup--order .popup-order {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.popup--order .popup-order__title {
+  margin-bottom: 2.5rem;
+}
+
+.popup--order .popup-order__image {
+  width: 12.5rem;
+  margin-bottom: 1.25rem;
+}
+
+.popup--order .popup-order__image img {
+  width: 100%;
+}
+
+.popup--order .popup-order__form {
+  max-width: 40rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 1.25rem;
+}
+
+.popup--order .form-order__line {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 0.3125rem;
+}
+
+.popup--order .product-order__code {
+  font-size: 1rem;
+  line-height: 1.0625;
+  color: #9A9999;
+}
+
+.popup--order .product-order__code:not(:last-child) {
+  margin-bottom: 0.625rem;
+}
+
+.popup--order .line-order__label {
+  font-size: 0.75rem;
+  line-height: 1.25;
+  color: #A6A6A6;
+}
+
+.popup--order .line-order__label span {
+  color: #DE4444;
+}
+
+.popup--order .line-order__input {
+  padding: 0.625rem;
+  border: 0.125rem solid #DBDBDB;
+  border-radius: 0.125rem;
+  color: #626262;
+  -webkit-transition: border-color 0.3s ease 0s;
+  -o-transition: border-color 0.3s ease 0s;
+  transition: border-color 0.3s ease 0s;
+}
+
+.popup--order .line-order__input::-webkit-input-placeholder {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.1875;
+  color: #A6A6A6;
+}
+
+.popup--order .line-order__input::-moz-placeholder {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.1875;
+  color: #A6A6A6;
+}
+
+.popup--order .line-order__input:-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.1875;
+  color: #A6A6A6;
+}
+
+.popup--order .line-order__input::-ms-input-placeholder {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.1875;
+  color: #A6A6A6;
+}
+
+.popup--order .line-order__input::placeholder {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1.1875;
+  color: #A6A6A6;
+}
+
+.popup--order .line-order__input._form-focus {
+  border-color: #2E7FDE;
+}
+
+.popup--order .line-order__input._form-error {
+  border-color: #DE4444;
+}
+
+.popup--order .line-order .form__error {
+  font-size: 0.75rem;
+  line-height: 1.25;
+  color: #DE4444;
+}
+
+.popup--order .quantity {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.popup--order .quantity__button {
+  border: 0.0625rem solid #A6A6A6;
+  border-radius: 0.125rem;
+}
+
+.popup--order-confirmation .order-confirmation {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.popup--order-confirmation .order-confirmation__title {
+  margin-bottom: 1.25rem;
+  text-align: center;
+}
+
+.popup--order-confirmation .order-confirmation p {
+  text-align: center;
+  margin-bottom: 0.3125rem;
+}
+
+.popup--order-confirmation .order-confirmation__button {
+  margin-top: 6.25rem;
 }
 
 .spollers {
@@ -1524,13 +1708,13 @@ body::after {
           align-items: center;
   border: 0.125rem solid #DBDBDB;
   border-radius: 0.125rem;
-  -webkit-transition: all 0.3s ease 0s;
-  -o-transition: all 0.3s ease 0s;
-  transition: all 0.3s ease 0s;
+  -webkit-transition: border-color 0.3s ease 0s;
+  -o-transition: border-color 0.3s ease 0s;
+  transition: border-color 0.3s ease 0s;
 }
 
 .search-header__field._form-focus {
-  border-color: #A6A6A6;
+  border-color: #2E7FDE;
 }
 
 .search-header__input {
@@ -1599,13 +1783,17 @@ body::after {
   line-height: 1.2142857143;
   color: #9A9999;
   background-color: #FFFFFF;
-  border-radius: 2px;
-  border: 2px solid #A6A6A6;
-  border-top: 1px solid #A6A6A6;
+  border-radius: 0.125rem;
+  border: 0.125rem solid #2E7FDE;
+  border-top: 0.0625rem solid #A6A6A6;
 }
 
 .search-header__result.visible {
   visibility: visible;
+}
+
+.search-header__result li {
+  padding: 0.3125rem;
 }
 
 .search-header__result li:not(:last-child) {
@@ -1613,8 +1801,8 @@ body::after {
 }
 
 .search-header__result li.selected {
-  background-color: #DBDBDB;
-  color: #424242;
+  background-color: #499AF9;
+  color: #ffffff;
 }
 
 .action-header__contact {
@@ -2489,6 +2677,10 @@ body::after {
   .button--border-blue {
     padding-left: 4.125rem;
   }
+
+  .title--blue {
+    font-size: 3rem;
+  }
 }
 
 @media (min-width: 47.99875em) {
@@ -2997,6 +3189,10 @@ body::after {
 
   .button--border-blue {
     padding-left: 0.3125rem;
+  }
+
+  .title--blue {
+    font-size: 2rem;
   }
 
   .product-card {
@@ -4287,6 +4483,18 @@ body::after {
       padding-left: calc(0.3125rem + 3.8125 * (100vw - 20rem) / 6.5625);
     }
 }
+
+@supports (font-size: clamp( 2rem , -1.0476190476rem  +  15.2380952381vw , 3rem )) {
+    .title--blue {
+      font-size: clamp( 2rem , -1.0476190476rem  +  15.2380952381vw , 3rem );
+    }
+}
+
+@supports not (font-size: clamp( 2rem , -1.0476190476rem  +  15.2380952381vw , 3rem )) {
+    .title--blue {
+      font-size: calc(2rem + 1 * (100vw - 20rem) / 6.5625);
+    }
+}
 }
 
 @media (min-width: 62em) and (max-width: 120em) {
@@ -4463,6 +4671,14 @@ body::after {
     font-weight: 700;
   }
 
+  .popup--order .popup__close:hover {
+    color: #DE4444;
+  }
+
+  .popup--order .line-order__input:hover {
+    border-color: #A6A6A6;
+  }
+
   .product-card:hover {
     -webkit-box-shadow: 0 0 10px rgba(73, 155, 249, 0.3);
             box-shadow: 0 0 10px rgba(73, 155, 249, 0.3);
@@ -4495,6 +4711,10 @@ body::after {
 
   .button-up:hover {
     background-color: #2E7FDE;
+  }
+
+  .search-header__field:hover {
+    border-color: #A6A6A6;
   }
 
   .search-header__btn:hover {
